--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- CDN -->
 		<dependency>
 			<groupId>com.cloudinary</groupId>
